fix: in the list of icons that had the icons too close together color was also added to the icons on the side and the size was adjusted in the navigation

--- a/docs/modules/components/navbar/code/sass/styles.scss
+++ b/docs/modules/components/navbar/code/sass/styles.scss
@@ -40,7 +40,6 @@
         color: var(--primary);
         position: relative;
         text-decoration: none;
-        font-size: 20px;
     }
 
 }
