--- a/docs/modules/layouts/main/sass/aside.scss
+++ b/docs/modules/layouts/main/sass/aside.scss
@@ -40,6 +40,7 @@
 	
 		.sidebar-item__icon {
 			display: flex;
+			justify-content: space-between;
 		}
 	}
 }
