--- a/docs/modules/pages/icons/icon-list/widget/scss/search.scss
+++ b/docs/modules/pages/icons/icon-list/widget/scss/search.scss
@@ -23,7 +23,6 @@
         color: var(--text-color);
         padding: 1px 0;
         margin: 1px 0;
-        transition: all .5s;
         background-color: var(--background);
     }
 }
