--- a/docs/modules/pages/icons/icon-list/widget/scss/styles.scss
+++ b/docs/modules/pages/icons/icon-list/widget/scss/styles.scss
@@ -11,6 +11,7 @@
 		.icon__container {
 			display: flex;
 			height: 6rem;
+			gap: 20px;
 			flex-direction: column;
 			transition: all 0.6s ease-in-out;
 			min-width: 11rem;
@@ -20,27 +21,8 @@
 			border-radius: 14px;
 			cursor: pointer;
 
-			&:hover {
-				animation: shadow-pop-top-left 0.9s linear both;
-			}
-
-			@keyframes shadow-pop-top-left {
-				0% {
-					box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e,
-						0 0 #3e3e3e, 0 0 #3e3e3e;
-					transform: translateX(0) translateY(0);
-				}
-
-				100% {
-					box-shadow: -1px -1px #3e3e3e, -2px -2px #3e3e3e, -3px -3px #3e3e3e, -4px -4px #3e3e3e,
-						-5px -5px #3e3e3e, -6px -6px #3e3e3e, -7px -7px #3e3e3e, -8px -8px #3e3e3e;
-					transform: translateX(8px) translateY(8px);
-				}
-			}
+			
 		}
 
-		svg {
-			fill: var(--on-background);
-		}
 	}
 }
