--- a/project/modules/icons/code/scss/styles.scss
+++ b/project/modules/icons/code/scss/styles.scss
@@ -19,8 +19,9 @@
 	&.lg {
 		height: 35px;
 		width: 35px;
-	}
-	svg {
-		fill: var(--on-primary);
-	}
+	}	
+}
+
+svg {
+	fill: var(--on-background);
 }
