--- a/project/modules/icons/code/scss/types.scss
+++ b/project/modules/icons/code/scss/types.scss
@@ -5,7 +5,7 @@
         color: var(--on-primary);
     
         svg {
-            fill: var(--on-primary);
+                fill: var(--on-background);
         }
     }
     
